src/sass/modules/_modules.scss
/* ... */
.footer {
    background-color: $tertiaryDarkColor;

    .wrapper {
        height: 100%;
        display: flex;
        justify-content:center;
        align-items:center;
        flex-direction:row;
    
        img, p {
            float: left;
        }
    
        p {
            margin: 0;
            line-height: 50px;
            padding-left: 20px;
            color: $lightTextColor;
        }
    
        .logo {
            height: 50px;
            margin:5px;
        }
    }
}

.mobile-nav {
    @include positioning(fixed, $r: 0, $t: 60px);
    height: 100%;
    background-color: $secondaryDarkColor;
    width: 0;
    overflow-x: hidden;
    transition: $transitionSpeed;
    z-index: 500;

    .title-nav {
        color: $goldColor;
        font-size: 1.5em;
        font-weight: $headerFontWeight;
        margin: 0;
        text-align: center;
    }

    .nav-ul {
        overflow: scroll;
        -ms-overflow-style: none;

        a {
            text-align: center;
            color: $silverColor;
            padding: 10px;
            font-weight: $paragraphFontWeight;
            display: block;
            line-height: 22px;
        }
    }
}

.nav-overlay, .product-info {
    @include positioning(fixed, 0, 0, 0, 0);
    background-color: $popUpOverlayColor;
    display: none;
}

.product-info {
    padding: 25px;
    z-index: 2000;

    .inner {
        position: relative;
        border-radius: $borderRadius;
        width: 100%;
        max-width: 500px;
        height: 100%;
        max-height: 800px;
        background-color: white;
        margin: 0 auto;
        overflow-y: hidden;
    }

    .fixed-close {
        position: relative;
        width: 30px;
        height: 30px;
        margin-bottom: 10px;
        cursor: pointer;

        .close-line {
            @include positioning(absolute, 0, 0);
            transition: $transitionSpeed;
            background-color: $silverColor;
            height: 4px;
            border-radius: 5px;
        }

        .line-1 {
            transform: rotate(-45deg);
        }

        .line-2 {
            transform: rotate(45deg);
        }

        .line-1, .line-2 {
            top: 13px;
        }
    }

    .info {
        position: relative;
        width: 100%;
        max-width: 100%; // Needed for IE inheritance
        height: calc(100% - 40px);
        overflow-y: auto;
        padding: 0 10px;
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;

        img {
            max-width: 100%;
            max-height: 350px;
            height: 50%;
            min-height: 250px;
            margin: 0 auto;
            display: block;
            border-radius: $borderRadius;
        }

        .info-wrapper {
            max-width: 100%; // Needed for IE inheritance

            h1 {
                font-weight: 100;
                font-family: "Beyond the Mountains";
                margin: 0;
                margin-top: 25px;
                letter-spacing: 1px;
                padding-left: 5px;
                color: $avocadoSectionColor;
                line-height: 50px;
                word-spacing: 5px;
            }
            
            .bostock-olive-header{
                color: #B1B825;
            }
            .bostock-lemon-header{
                color: #FCD500;
            }
            .bostock-rosemary-header{
                color: #10823F;
            }
            .bostock-truffle-header{
                color: #B5BB26;
            }
            .bostock-garlic-header{
                color: #B2AF9B;
            }
            .bostock-balsamic-header{
                color: #4F4534;
            }
        }
    }
}

